--- a/Bakery/index.html
+++ b/Bakery/index.html
@@ -50,7 +50,6 @@
         <section class="chef">
             <img src="image/header/icon.png" alt="" class="post-header-icon">
             <div class="inner-container clearfix">
-
                 <div class="col col-left">
                     <h2>Art of cakes</h2>
                     <h4>we create delicious memories</h4>
@@ -76,12 +75,140 @@
                 </div>
             </div>
         </section>
-        <!--<section class="best-choice"></section>
-        <section class="offer"></section>
-        <section class="jibarito"></section>-->
+        <section class="best-choice">
+            <div class="inner-container clearfix">
+                <div class="left-col"></div>
+                <div class="right-col">
+                    <h2>Tasty pancakes</h2>
+                    <h4>season favourite</h4>
+                    <p class="article-text">
+                        Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus.
+                        Nullam quis ante. Etiam sit amet orci eget eros faucibus.
+                    </p>
+                    <div class="slider">
+                        <div class="left-arrow-icon"></div>
+                        <div class="right-arrow-icon"></div>
+                        <div class="slider-inner">
+                            <div class="slider-inner-inner clearfix">
+                                <a href="#"><img src="image/main/section2/slider-1.png" alt=""></a>
+                                <a href="#"><img src="image/main/section2/slider-2.png" alt=""></a>
+                                <a href="#"><img src="image/main/section2/slider-3.png" alt=""></a>
+                                <a href="#"><img src="image/main/section2/slider-2.png" alt=""></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="minutes">
+                    <h5>ready in</h5>
+                    <h6>40</h6>
+                    <h4>mins</h4>
+                </div>
+            </div>
+        </section>
+        <section class="breakfast">
+            <div class="inner-container clearfix">
+                <div class="breakfast-menu">
+                    <h2>Breakfast</h2>
+                    <h4>7am Breakfast? we’re open!</h4>
+                    <div class="dish">
+                        <h3 class="name">Full breakfast</h3>
+                        <p class="article-text">Duis ut tortor, et risus, vulputate pretium</p>
+                        <p class="price">$12.49</p>
+                        <img src="image/main/section3/left-side-icon.png" alt="">
+                    </div>
+                    <div class="dish">
+                        <h3 class="name">Toast & Jam</h3>
+                        <p class="article-text">Suspendisse, tempus, nterdum</p>
+                        <p class="price">$4.90</p>
+                        <img src="image/main/section3/left-side-icon.png" alt="">
+                    </div>
+                    <div class="dish">
+                        <h3 class="name">Muffins</h3>
+                        <p class="article-text">Fusce eget dui sodales est</p>
+                        <p class="price">$3.95</p>
+                        <img src="image/main/section3/left-side-icon.png" alt="">
+                    </div>
+                </div>
+                <div class="menu-page">
+                    <h2>Your morning<br> Escape with Flair</h2>
+                    <p class="article-text">Donec vitae sapien ut libero venenatis faucibus.
+                        Nullam quis ante. Etiam sit amet orci eget eros
+                        faucibus tincidunt. Duis leo.</p>
+                    <a href="#" class="read-button">READ</a>
+                </div>
+            </div>
+            <div class="inner-for-bg"></div>
+        </section>
+        <section class="sandwich">
+            <div class="inner-container clerfix">
+                <div class="head">
+                    <h2>The Jibarito sandwich</h2>
+                    <h4>the best sandwich you’ve ever tasted!</h4>
+                </div>
+                <div class="consist">
+                    <div class="ingredient">
+                        <img src="image/main/section4/left-icon-1.png" alt="">
+                        <h3 class="name">Class aptent</h3>
+                        <p class="article-text">Quot alienum persecuti ut eam, nam ad  atqui primis nusquam.</p>
+                    </div>
+                    <div class="ingredient">
+                        <img src="image/main/section4/left-icon-2.png" alt="">
+                        <h3 class="name">Nulla eget</h3>
+                        <p class="article-text">Nullam dictum felis eu pede mollis  pretium Integer tincidunt.</p>
+                    </div>
+                    <div class="ingredient">
+                        <img src="image/main/section4/left-icon-3.png" alt="">
+                        <h3 class="name">Sed nibh purus</h3>
+                        <p class="article-text"> Aenean eleifend tellus leo ligula,  porttitor eu, consequat vitae.</p>
+                    </div>
+                </div>
+                <div class="sandwich-pic">
+                    <aside>
+                        <div class="minutes transparent">
+                            <h5>prep</h5>
+                            <h6>15</h6>
+                            <h4>mins</h4>
+                        </div>
+                        <div class="minutes transparent">
+                            <h5>cook</h5>
+                            <h6>35</h6>
+                            <h4>mins</h4>
+                        </div>
+                        <div class="minutes">
+                            <h5>ready in</h5>
+                            <h6>50</h6>
+                            <h4>mins</h4>
+                        </div>
+                    </aside>
+                    <a href="#" class="recipe">full recipe</a>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <div class="inner-container clearfix">
+            <div class="nav-bar">
+                <ul class="menu">
+                    <li><a href="#">our menu</a></li>
+                    <li class="tilda">~</li>
+                    <li><a href="#">gallery</a></li>
+                    <li class="tilda">~</li>
+                    <li><a href="#">culture</a></li>
+                </ul>
+            </div>
+            <div class="logotype">
+                <p class="logo">Gustoso</p>
+            </div>
+            <div class="nav-bar">
+                <ul class="menu">
+                    <li><a href="#">events</a></li>
+                    <li class="tilda">~</li>
+                    <li><a href="#">catering</a></li>
+                    <li class="tilda">~</li>
+                    <li><a href="#">visit us</a></li>
+                </ul>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
