--- a/Bakery/index.html
+++ b/Bakery/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style/style-min-1280.css">
     <link rel="stylesheet" href="style/style1024-1279.css">
     <link rel="stylesheet" href="style/style768-1023.css">
+    <link rel="stylesheet" href="style/style600-767.css">
+    <link rel="stylesheet" href="style/style480-599.css">
     <link href="https://fonts.googleapis.com/css?family=Alegreya:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900" rel="stylesheet">
     <script src="js/main.js" defer></script>
@@ -15,18 +17,21 @@
         <div class="navigation-container">
             <nav class="clearfix">
                 <p class="logo">Gustoso</p>
-                <div class="small-menu-icon">&#8801</div>
-                <ul class="menu">
-                    <li><a href="#">welcome</a></li>
-                    <li class="tilda">~</li>
-                    <li><a href="#">menu</a></li>
-                    <li class="tilda">~</li>
-                    <li><a href="#">reservations</a></li>
-                    <li class="tilda">~</li>
-                    <li><a href="#">news</a></li>
-                    <li class="tilda">~</li>
-                    <li><a href="#">contact</a></li>
-                </ul>
+                <div class="menu">
+                    <div class="small-menu-icon">&#8801</div>
+                    <ul class="nav-list">
+                        <li><a href="#">welcome</a></li>
+                        <li class="tilda">~</li>
+                        <li><a href="#">menu</a></li>
+                        <li class="tilda">~</li>
+                        <li><a href="#">reservations</a></li>
+                        <li class="tilda">~</li>
+                        <li><a href="#">news</a></li>
+                        <li class="tilda">~</li>
+                        <li><a href="#">contact</a></li>
+                    </ul>
+                </div>
+
                 <div class="social clearfix">
                     <a href="#"><img src="image/header/twitter.png" alt=""></a>
                     <a href="#"><img src="image/header/facebook.png" alt=""></a>
@@ -99,12 +104,13 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="minutes">
+                    <div class="minutes">
                     <h5>ready in</h5>
                     <h6>40</h6>
                     <h4>mins</h4>
                 </div>
+                </div>
+
             </div>
         </section>
         <section class="breakfast">
@@ -147,7 +153,7 @@
                     <h2>The Jibarito sandwich</h2>
                     <h4>the best sandwich you’ve ever tasted!</h4>
                 </div>
-                <div class="consist">
+                <div class="consist clearfix">
                     <div class="ingredient">
                         <img src="image/main/section4/left-icon-1.png" alt="">
                         <h3 class="name">Class aptent</h3>
