added slider, fixed some styles

--- a/Bakery/index.html
+++ b/Bakery/index.html
@@ -93,10 +93,10 @@
                         Nullam quis ante. Etiam sit amet orci eget eros faucibus.
                     </p>
                     <div class="slider">
-                        <div class="left-arrow-icon"></div>
-                        <div class="right-arrow-icon"></div>
+                        <div class="left-arrow-icon" id="prev-image"></div>
+                        <div class="right-arrow-icon" id="next-image"></div>
                         <div class="slider-inner">
-                            <div class="slider-inner-inner clearfix">
+                            <div class="slider-inner-inner" id="slider-moving-panel">
                                 <a href="#"><img src="image/main/section2/slider-1.png" alt=""></a>
                                 <a href="#"><img src="image/main/section2/slider-2.png" alt=""></a>
                                 <a href="#"><img src="image/main/section2/slider-3.png" alt=""></a>
