fixed service sections representation

--- a/Atlantida/elenatafeenko/index.html
+++ b/Atlantida/elenatafeenko/index.html
@@ -144,7 +144,7 @@
                     Donec aliquet, ipsum ut lobortis facilisis, nisi ligula aliquam odio, ut vehicula odio lorem in erat.
                     Quisque quam ipsum, commodo non condimentum a, fermentum id sapien. Pellentesque sit amet sem neque.
                 </p>
-                <div class="services-container clearfix">
+                <div class="services-container">
                     <div class="serv">
                         <div class="serv-inner">
                             <h4>GRAPHIC<br> DESIGN</h4>
