--- a/Atlantida/elenatafeenko/index.html
+++ b/Atlantida/elenatafeenko/index.html
@@ -90,7 +90,7 @@
                         <div class="for-h2">
                             <h2>ABOUT US</h2>
                         </div>
-                        <p>
+                        <p class="article-text">
                             Donec aliquet, ipsum ut lobortis facilisis, nisi ligula aliquam odio, ut vehicula odio lorem
                             in erat. Quisque quam ipsum, commodo non condimentum a, fermentum id sapien. Pellentesque sit
                             amet sem neque. Maecenas est enim, sollicitudin sit amet nisi vel, mattis efficitur sapien.
@@ -298,7 +298,7 @@
                 <div class="for-h2">
                     <h2>OUR TEAM</h2>
                 </div>
-                <p>
+                <p class="art-text">
                     Nullam lobortis, turpis lobortis placerat vehicula, ipsum lacus bibendum dolor, sit amet pretium odio
                     magna eget risus. Phasellus iaculis ultricies duiNullam lobortis, turpis lobortis placerat vehicula,
                     ipsum lacus bibendum dolor, sit amet pretium odio magna eget risus.
