removed lesson 1 and 2

--- a/Atlantida/elenatafeenko/index.html
+++ b/Atlantida/elenatafeenko/index.html
@@ -205,7 +205,7 @@
                         <div class="triangle"></div>
                         <div class="round"></div>
                         <div class="event-inner">
-                            <p href="#" class="title">Donec id lobortis tellus. Maecenas vel dignissim</p>
+                            <p class="title">Donec id lobortis tellus. Maecenas vel dignissim</p>
                             <p class="date">07 October 2015</p>
                             <p class="art-text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar,
@@ -219,7 +219,7 @@
                         <div class="triangle"></div>
                         <div class="round"></div>
                         <div class="event-inner">
-                            <p href="#" class="title">Nam tincidunt, lacus sit amet ultrices</p>
+                            <p class="title">Nam tincidunt, lacus sit amet ultrices</p>
                             <p class="date">05 June 2015</p>
                             <p class="art-text">
                                 In pulvinar, mi at rhoncus condimentum, turpis nisl scelerisque turpis, ut gravida eros
@@ -232,7 +232,7 @@
                         <div class="triangle"></div>
                         <div class="round"></div>
                         <div class="event-inner">
-                            <p href="#" class="title">Donec quis faucibus lorem</p>
+                            <p class="title">Donec quis faucibus lorem</p>
                             <p class="date">07 May 2015</p>
                             <p class="art-text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar,
@@ -246,7 +246,7 @@
                         <div class="triangle"></div>
                         <div class="round"></div>
                         <div class="event-inner">
-                            <p href="#" class="title">Nunc efficitur laoreet turpis sed auctor.</p>
+                            <p class="title">Nunc efficitur laoreet turpis sed auctor.</p>
                             <p class="date">02 April 2015</p>
                             <p class="art-text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar,
@@ -266,7 +266,7 @@
                         <div class="triangle"></div>
                         <div class="round"></div>
                         <div class="event-inner">
-                            <p href="#" class="title">Donec id lobortis tellus. Maecenas vel dignissim</p>
+                            <p class="title">Donec id lobortis tellus. Maecenas vel dignissim</p>
                             <p class="date">07 October 2014</p>
                             <p class="art-text">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar,
@@ -280,7 +280,7 @@
                         <div class="triangle"></div>
                         <div class="round"></div>
                         <div class="event-inner">
-                            <p href="#" class="title">Nam tincidunt, lacus sit amet ultrices</p>
+                            <p class="title">Nam tincidunt, lacus sit amet ultrices</p>
                             <p class="date">05 June 2014</p>
                             <p class="art-text">
                                 In pulvinar, mi at rhoncus condimentum, turpis nisl scelerisque turpis, ut gravida eros
